added some fields in environment variables

--- a/.env
+++ b/.env
@@ -11,3 +11,5 @@ DB_COLLECTION_CONSOLE = consoles
 DEFAULT_OFFSET = 0;
 DEFAULT_COUNT = 5;
 COUNT_LIMIT = 20;
+
+RESPONSE_INVALID_ID = "Invalid Id provided"
