--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "My personal hobbby project express app with mongo database.",
   "main": "index.js",
   "scripts": {
-    "start": "npm index.js",
+    "start": "node index.js",
     "dev": "nodemon",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
